Sonar: Fix "Java features should be preferred to Guava"
Sonar issue java:S4738

Part of #61